# proj_plots

./: .gitignore  NEWS.md  README.md  README.rst  proj_data.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build_test.yml
.ipynb_checkpoints/: proj_data-checkpoint.ipynb  proj_xvals-checkpoint.ipynb  test_proj-checkpoint.ipynb
docs/: conf.py  example.md  faq.md  index.md  index.rst  requirements.txt
docs/deprecated/: index.rst  projplot.md
docs/pages/: contents.rst  examples.rst  faq.rst  objective.rst
docs/source/: modules.rst  projplot.rst
proj_plots.egg-info/: PKG-INFO  SOURCES.txt
src/proj_plots/: __init__.py  proj.py  proj_data.py  proj_plot.py  proj_plots.py  proj_xvals.py
src/proj_plots.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/projplot/: __init__.py  proj.py  proj_plot.py  projplot.py
src/test/: test_projdata.py  test_xvals.py
tests/: __init__.py  test_projdata.py  test_projplot.py  test_xvals.py
