[metadata]
name = projplot
version = 1.0
author = Kanika Choptra, Martin Lysy 
author_email = mlysy@uwaterloo.ca
description = Projection plots for assessing convergence of optimization routines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlysy/projplot
project_urls =
    Bug Tracker = https://github.com/mlysy/projplot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# python_requires = >=3.6
install_requires =
    numpy
    pandas
    seaborn
    
[options.packages.find]
where = src
